# fuel-crypto

./: .gitignore  README.md
bignum-lib/: .gitignore  Cargo.toml  Forc.toml
bignum-lib/src/: big_uint.sw  helpers.sw  main.sw  mod_arithmetic.sw
bls/: Cargo.toml  Forc.toml
bls/src/: consts.sw  ec1.sw  fields.sw  lib.sw  main.sw  test_helpers.sw  vect.sw
bls12-381/: Cargo.toml  Forc.toml
bls12-381/src/: consts.sw  definitions.sw  ec1.sw  fields.sw  fp.sw  main.sw  test_helpers.sw  vec384.sw  vect.sw
bls12_381/: Cargo.toml  Forc.toml
bls12_381/src/: choice.sw  f12.sw  fp.sw  fp2.sw  fp6.sw  g1.sw  lib.sw  main.sw  scalar.sw  util.sw
bls12_381/tests/: harness.rs
contract/: Forc.toml  README.md
edwards25519/: Cargo.toml  Forc.toml
edwards25519/src/: fe25519.sw  field_element.sw  ge25519.sw  lib.sw  main.sw  test_helpers.sw
edwards25519/tests/: harness.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
old-bls/src/: lib.sw  vect.sw
old-tests-bls/: Cargo.toml
old-tests-bls/src/: main.sw
old-tests-bls/tests/: harness.rs
old-tests-bls/tests/tests_l_shift/: mod.rs
old-tests-bls/tests/tests_mul_by_x_fp/: mod.rs
old-tests-bls/tests/tests_temp_mul/: mod.rs
old-tests-bls/tests/tests_vect_fp2/: mod.rs
p256/: Cargo.toml  Forc.toml  README.md
p256/lib/: Forc.toml  README.md
p256/lib/src/: affine.sw  projective.sw  scalar.sw  verifyingkey.sw
p256/src/: affine.sw  ecdsa.sw  field.sw  field64.sw  hash2curve.sw  hash_to_field.sw  hmac.sw  lib.sw  main.sw  modular_helper.sw  point_arithmetic.sw  predicate.sw  projective.sw  publickey.sw  recover.sw  scalar.sw  scalar64.sw  secretkey.sw  signingkey.sw  verifyingkey.sw  wallet.sw
p256/tests/: harness.rs
p256/verifying_contract/: Forc.toml  README.md
p256/verifying_contract/src/: main.sw
p256_test_new/curve_test/: Forc.toml
p256_test_new/field_test/: Forc.toml
p256_tests/: Cargo.toml  Forc.toml  README.md
p256_tests/src/: main.sw
predicate/: Forc.toml  README.md
test_contract/: .gitignore  Cargo.toml  Forc.toml
testing/new_tests_bls12_381/: Cargo.toml  Forc.toml
testing/new_tests_bls12_381/src/: main.sw
testing/new_tests_bls12_381/tests/: harness.rs
testing/new_tests_bls12_381/tests/tests_fp/: mod.rs
testing/new_tests_bls12_381/tests/tests_fp2/: mod.rs
testing/new_tests_bls12_381/tests/tests_fp6/: mod.rs
testing/new_tests_bls12_381/tests/utils/: mod.rs
testing/p256_tests/hmac_test/: Cargo.toml  Forc.toml
testing/p256_tests/hmac_test/tests/: harness.rs
tests-bls/: Cargo.toml  Forc.toml
tests_bls12_381/: Cargo.toml  Forc.toml
tests_bls12_381/src/: main.sw
tests_bls12_381/tests/: harness.rs
tests_bls12_381/tests/tests_fp/: mod.rs
tests_bls12_381/tests/tests_fp2/: mod.rs
tests_bls12_381/tests/tests_fp6/: mod.rs
tests_bls12_381/tests/tests_g1/: mod.rs
tests_bls12_381/tests/tests_scalar/: mod.rs
utils/: Cargo.toml  Forc.toml
utils_old/: Cargo.toml  Forc.toml
(+106 files in other folders)
