[project]
name = "tests-bls"
version = "0.1.0"
authors = ["Hashcloak"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = "0.19"
fuels-abigen-macro = "0.16.1"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
