[project]
name = "tests_bls12_381"
version = "0.1.0"
authors = ["Elena Fuentes Bongenaar"]
edition = "2021"
license = "Apache-2.0"

# change to 0.19
[dependencies]
fuels = { version = "0.19", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
