[package]
name = "new_tests_bls12_381"
version = "0.1.0"
edition = "2021"
authors = ["HashCloak"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.31.1", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
fuel-chain-config = { version = "0.14.1", default-features = false }
[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
