[package]
name = "hmac_test"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["HashCloak"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.39", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"

[dependencies]
fuel-core-chain-config = { version = "0.17", default-features = false }